# examples

./: .gitignore  LICENSE.md  README.md
basic/: CMakeLists.txt
basic/src/: fix_me.c  overflow.c  rectangle_calculator.c  user_input.c
control_flow/: CMakeLists.txt
control_flow/src/: break.c  for.c  if_else.c  recursion.c  scopes.c  switch.c  while.c
data_types/: CMakeLists.txt
data_types/src/: bit_fields.c  char.c  enum.c  floating_point.c  integer.c  structures.c  unions.c
files_memory/: CMakeLists.txt
files_memory/include/: data_lib.c  data_lib.h
files_memory/src/: binary_file.c  malloc.c  mem.c  text_file.c
io_examples/: CMakeLists.txt
io_examples/src/: cl_argument.c  formatting.c  printf_example.c  scanf_example.c
libraries/: CMakeLists.txt
libraries/include/my_math/: CMakeLists.txt
pointers/: CMakeLists.txt
pointers/src/: function_pointers.c  pointers.c  pointers_algebra.c  usage_of_const.c
preprocessor/: CMakeLists.txt
preprocessor/include/: example_lib.h
preprocessor/src/: define.c  header_scope.c  header_scope.h  stringify.c  syntax.c  token_cat.c
